- replace some vars with explicit type - fixed failing test