@@ -1,10 +1,12 @@
 package org.hzt.utils.iterables;
 
+import org.hzt.utils.collections.ListX;
 import org.hzt.utils.sequences.Sequence;
 import org.hzt.utils.sequences.primitives.IntSequence;
 import org.junit.jupiter.api.Test;
 
 import java.time.LocalDate;
+import java.util.Arrays;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
 
@@ -25,11 +27,11 @@ class SortableTest {
 
         assertEquals(0, counter.get());
 
-        final var integers = sequence.toList();
+        final List<Integer> integers = sequence.toList();
 
         assertAll(
                 () -> assertEquals(10, counter.get()),
-                () -> assertEquals(List.of(0, 1, 2, 3, 4, 5, 6, 7, 8, 9), integers)
+                () -> assertEquals(Arrays.asList(0, 1, 2, 3, 4, 5, 6, 7, 8, 9), integers)
         );
     }
 
@@ -44,7 +46,7 @@ class SortableTest {
 
         assertEquals(0, counter.get());
 
-        final var integers = sequence.toArray();
+        final int[] integers = sequence.toArray();
 
         assertAll(
                 () -> assertEquals(10, counter.get()),
@@ -54,7 +56,7 @@ class SortableTest {
 
     @Test
     void testSequenceSortedBy() {
-        final var englishNameList = List.of(
+        final List<String> englishNameList = Arrays.asList(
                 "Oliver",
                 "Harry",
                 "George",
@@ -65,14 +67,14 @@ class SortableTest {
                 "Oscar",
                 "Charlie"
         );
-        final var names = Sequence.of(englishNameList.stream())
+        final List<String> names = Sequence.of(englishNameList.stream())
                 .take(10)
                 .sortedBy(String::length)
                 .toList();
 
         System.out.println("names = " + names);
 
-        final var expectedNames = List.of("Leo, Noah, Jack, Harry, Jacob, Oscar, Oliver, George, Charlie"
+        final List<String> expectedNames = Arrays.asList("Leo, Noah, Jack, Harry, Jacob, Oscar, Oliver, George, Charlie"
                 .split(", "));
 
         assertEquals(expectedNames, names);
@@ -80,19 +82,19 @@ class SortableTest {
 
     @Test
     void testSequenceDatesSortedBy() {
-        final var localDates = Sequence.generate(LocalDate.parse("2019-10-15"), date -> date.minusWeeks(1))
+        final ListX<LocalDate> localDates = Sequence.generate(LocalDate.parse("2019-10-15"), date -> date.minusWeeks(1))
                 .take(10)
                 .onEach(System.out::println)
                 .sortedBy(LocalDate::getDayOfYear)
-                .toList();
+                .toListX();
 
         System.out.println("localDates = " + localDates);
 
-        final var expectedDates = Sequence
+        final ListX<LocalDate> expectedDates = Sequence
                 .of("2019-08-13, 2019-08-20, 2019-08-27, 2019-09-03, 2019-09-10, 2019-09-17, 2019-09-24, 2019-10-01, 2019-10-08, 2019-10-15"
                         .split(", "))
                 .map(LocalDate::parse)
-                .toList();
+                .toListX();
 
         assertEquals(expectedDates, localDates);
     }
